<resources>
    <string name="app_name">Circle</string>
    <string name="loginBtnTitle">登录</string>
    <string name="registerBtnTitle">注册</string>
    <string name="passwordHintStr">登录密码</string>
    <string name="userNameHintStr">请输入用户名</string>
    <string name="passwordConfirmHintStr">确认登录密码</string>
    <string name="loginActivityTitle">登录</string>
    <string name="registerActivityTitle">注册</string>

    <string name="answerNumTitle">%1$d 个回答</string>
    <string name="questionAnswerTitle">问答</string>
    <string name="addQuestionTitle">撰写提问</string>
    <string name="addAnswerTitle">撰写回答</string>
    <string name="addBtnTitle">确定</string>
    <string name="section_1_title_str">问答</string>
    <string name="section_2_title_str">投票</string>
    <string name="section_4_title_str">我</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="voteTitleStr">投票</string>
    <string name="commentTitleStr">动态</string>
    <string name="meTitleStr">我</string>
    <string name="settingTitleStr">设置</string>
    <string name="btnLogoutTitleStr">退出</string>
    <string name="daysAgo">%1$d 天前</string>
    <string name="hoursAgo">%1$d 小时前</string>
    <string name="minutesAgo">%1$d 分钟前</string>
    <string name="secondsAgo">%1$d 秒前</string>
</resources>
